--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,29 +1,47 @@
-<h2>Sign up</h2>
+<div class="hero is-fullheight">
+  <div class="hero-body is-justify-content-center is-align-items-center">
+    <div class="columns is-flex is-flex-direction-column box">
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+      <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+        <%= render "devise/shared/error_messages", resource: resource %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+        <div class="field">
+          <%= f.label :email, class: 'label' %>
+          <div class="control">
+            <%= f.email_field :email, class: 'input', autofocus: true, autocomplete: "email" %>
+          </div>
+
+        </div>
+
+        <div class="field">
+          <div class="control">
+            <%= f.label :password, class: 'label' %>
+            <% if @minimum_password_length %>
+              <em>(<%= @minimum_password_length %> characters minimum)</em>
+            <% end %><br/>
+            <%= f.password_field :password, class: 'input', autocomplete: "new-password" %>
+          </div>
+        </div>
+
+        <div class="field">
+          <%= f.label :password_confirmation, class: 'label' %>
+          <%= f.password_field :password_confirmation, class: 'input', autocomplete: "new-password" %>
+        </div>
+
+        <div class="actions control">
+          <%= f.submit "Sign up", class: 'button is-primary is-fullwidth' %>
+        </div>
+      <% end %>
+
+      <%#= render "devise/shared/links" %>
+      <%- if controller_name != 'sessions' %>
+        <p>
+          Already have an account?
+          <%= link_to "Log in", new_session_path(resource_name), class: 'has-text-primary' %><br />
+        </p>
+
+      <% end %>
+
+    </div>
   </div>
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
