--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,12 +8,28 @@
 
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
   </head>
 
   <body>
-  <p class="notice"><%= notice %></p>
-  <p class="alert"><%= alert %></p>
+  <section class="section">
+    <div class="container">
+      <% unless notice.to_s.strip.empty? %>
+        <div class="notification is-success">
+          <button class="delete" onclick="this.parentElement.style.display='none'"></button>
+          <%= notice %>
+        </div>
+      <% end %>
 
-  <%= yield %>
+      <% unless alert.to_s.strip.empty? %>
+        <div class="notification is-primary">
+          <button class="delete" onclick="this.parentElement.style.display='none'"></button>
+          <%= alert %>
+        </div>
+      <% end %>
+
+      <%= yield %>
+    </div>
+  </section>
   </body>
 </html>
