--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,43 +1,58 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<div class="hero is-fullheight">
+  <div class="hero-body is-justify-content-center is-align-items-center">
+    <div class="columns is-flex is-flex-direction-column box">
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+      <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+        <%= render "devise/shared/error_messages", resource: resource %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+        <div class="field">
+          <%= f.label :email, class: 'label' %>
+          <div class="control">
+            <%= f.email_field :email, class: 'input', autofocus: true, autocomplete: "email" %>
+          </div>
+        </div>
+
+        <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+          <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
+        <% end %>
+
+        <div class="field">
+          <%= f.label :password, class: 'label' %> <i>(leave blank if you don't want to change it)</i><br/>
+          <div class="control">
+            <%= f.password_field :password, autocomplete: "new-password", class: 'input' %>
+            <% if @minimum_password_length %>
+              <br/>
+              <em><%= @minimum_password_length %> characters minimum</em>
+            <% end %>
+          </div>
+        </div>
+
+        <div class="field">
+          <%= f.label :password_confirmation, class: 'label' %>
+          <div class="control">
+            <%= f.password_field :password_confirmation, class: 'input', autocomplete: "new-password" %>
+          </div>
+        </div>
+
+        <div class="field">
+          <%= f.label :current_password, class: 'label' %> <i>(we need your current password to confirm your changes)</i>
+          <div class="control">
+            <%= f.password_field :current_password, class: 'input', autocomplete: "current-password" %>
+          </div>
+
+        </div>
+
+        <div class="actions control">
+          <%= f.submit "Update Password", class: 'button is-primary is-fullwidth' %>
+        </div>
+      <% end %>
+
+<!--      <h3>Cancel my account</h3>-->
+
+<!--      <p>Unhappy? <%#= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>-->
+
+      <%= link_to "Back", :back, class: 'has-text-primary has-text-centered' %>
+
+    </div>
   </div>
-
-  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-    <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
-  <% end %>
-
-  <div class="field">
-    <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-    <% if @minimum_password_length %>
-      <br />
-      <em><%= @minimum_password_length %> characters minimum</em>
-    <% end %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-    <%= f.password_field :current_password, autocomplete: "current-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Update" %>
-  </div>
-<% end %>
-
-<h3>Cancel my account</h3>
-
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
-
-<%= link_to "Back", :back %>
+</div>
