Active admin: about, contact

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -17,11 +17,11 @@
         Home
       </a>
 
-      <a class="navbar-item">
+      <a class="navbar-item" href="<%= about_path %>">
         About
       </a>
 
-      <a class="navbar-item">
+      <a class="navbar-item" href="<%= contact_path %>">
         Contact
       </a>
     </div>
