--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,39 +1,45 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>FloristEcommerce</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <%= csrf_meta_tags %>
-    <%= csp_meta_tag %>
+<head>
+  <meta charset="utf-8">
+  <title>FloristEcommerce</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <%= csrf_meta_tags %>
+  <%= csp_meta_tag %>
 
-    <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
-    <%= javascript_importmap_tags %>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
-  </head>
+  <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
+  <%= javascript_importmap_tags %>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
+</head>
 
-  <body>
-  <section class="section">
-    <div class="container">
-      <% if user_signed_in? %>
-        <%= render 'layouts/navbar' %>
-      <% end %>
+<body>
+<section class="section">
+  <div class="container">
+    <% if user_signed_in? %>
+      <%= render 'layouts/navbar' %>
+    <% end %>
 
-      <% unless notice.to_s.strip.empty? %>
-        <div class="notification is-success">
-          <button class="delete" onclick="this.parentElement.style.display='none'"></button>
-          <%= notice %>
-        </div>
-      <% end %>
+    <% if user_signed_in? %>
+      <%= render 'layouts/filtersearch' %>
+    <% end %>
 
-      <% unless alert.to_s.strip.empty? %>
-        <div class="notification is-primary">
-          <button class="delete" onclick="this.parentElement.style.display='none'"></button>
-          <%= alert %>
-        </div>
-      <% end %>
+    <% unless notice.to_s.strip.empty? %>
+      <div class="notification is-success">
+        <button class="delete" onclick="this.parentElement.style.display='none'"></button>
+        <%= notice %>
+      </div>
+    <% end %>
 
-      <%= yield %>
-    </div>
-  </section>
-  </body>
+    <% unless alert.to_s.strip.empty? %>
+      <div class="notification is-primary">
+        <button class="delete" onclick="this.parentElement.style.display='none'"></button>
+        <%= alert %>
+      </div>
+    <% end %>
+
+    <%= yield %>
+
+  </div>
+</section>
+</body>
 </html>
