--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -30,6 +30,9 @@
           </span>
         </a>
       <% end %>
+      <a class="navbar-item" href="<%= order_index_path %>">
+        Orders
+      </a>
 
     </div>
 
