--- a/app/views/product/show.html.erb
+++ b/app/views/product/show.html.erb
@@ -3,7 +3,9 @@
 <%= image_tag(@product.image.variant(:normal), alt: @product.name) %>
 </figure>
 <h1 class="title"><%= @product.name %></h1>
-<h2 class="subtitle"><%= number_to_currency @product.price %></h2>
+<h2 class="subtitle">
+  <%= render 'product/sale', product: @product %>
+</h2>
 <p>Description: <%= link_to 'More information', @product.description_url %></p>
 <p>Containers: <%= @product.containers %></p>
 <p>Flower time: <%= @product.flower_time %></p>
