--- a/app/views/product/_product.html.erb
+++ b/app/views/product/_product.html.erb
@@ -12,7 +12,7 @@
             <p class="title is-6">
               <%= truncate product.name, length: 30 %>
             </p>
-            <p class="subtitle is-6"><%= number_to_currency product.price %></p>
+            <%= render "product/sale", product: product %>
           </div>
         </div>
 
