--- a/app/views/order/_order.html.erb
+++ b/app/views/order/_order.html.erb
@@ -1,4 +1,6 @@
 <%= link_to "Order ##{order.id}", order_path(order)  %>
+<p>Status: <%= order.order_status.name %></p>
+
 <p>Products:</p>
 <table class="table">
   <thead>
