Styles for mobile.

--- a/app/views/cart/index.html.erb
+++ b/app/views/cart/index.html.erb
@@ -38,7 +38,7 @@
           <td>
             <% if cart.include?(product) %>
               <%= button_to cart_path(product), method: :delete, class: 'button is-danger' do %>
-                Remove From Cart
+                Remove
               <% end %>
             <% end %>
           </td>
