--- a/app/views/product/filter.html.erb
+++ b/app/views/product/filter.html.erb
@@ -1,6 +1,6 @@
 We can find <%= @products.count %> products with the filter "<%= @filter %>"
 <%= render 'paginate', products: @products %>
-<div class="columns is-multiline is-mobile">
+<div class="columns is-multiline">
 
   <% @products.each do |product| %>
     <%= render 'product', product: product %>
