--- a/app/views/product/_paginate.erb
+++ b/app/views/product/_paginate.erb
@@ -1,6 +1,7 @@
 <div class="columns">
-  <div class="column is-four-fifths">
-  </div>
+<!--  <div class="column is-three-quarters-mobile is-two-thirds-tablet is-half-desktop is-one-third-widescreen is-one-quarter-fullhd">-->
+<!--  </div>-->
+  <div class="column"></div>
   <div class="column">
     <%= paginate products %>
   </div>
