--- a/app/views/product/search.html.erb
+++ b/app/views/product/search.html.erb
@@ -7,7 +7,7 @@
     <% end %>
   </p>
 </div>
-<div class="columns is-multiline is-mobile">
+<div class="columns is-multiline">
 
   <% @products.each do |product| %>
     <%= render 'product', product: product %>
