--- a/app/views/product/_product.html.erb
+++ b/app/views/product/_product.html.erb
@@ -3,7 +3,7 @@
     <div class="card">
       <div class="card-image">
         <figure class="image is-4by3">
-          <%= link_to image_tag(product.image.variant(:thumb), alt: product.name), product %>
+          <%= link_to image_tag(product.image.variant(:normal), alt: product.name), product %>
         </figure>
       </div>
       <div class="card-content">
