--- a/app/views/product/show.html.erb
+++ b/app/views/product/show.html.erb
@@ -1,6 +1,6 @@
 
 <figure class="image is-3by1">
-<%= image_tag(@product.image.variant(:normal), alt: @product.name) %>
+<%= image_tag(@product.image.variant(:high), alt: @product.name) %>
 </figure>
 <h1 class="title"><%= @product.name %></h1>
 <h2 class="subtitle">
