Add ERB diagram to the about page

--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -1,4 +1,9 @@
 <div class="content">
   <h1><%= @about.title %></h1>
   <p><%= @about.content %></p>
+
+  <figure class="image is-square">
+    <%= image_tag asset_path('ERB.png'), alt: "ERB diagram" %>
+    <!--    <img src="<%#= asset_path('diagram.png') %>">-->
+  </figure>
 </div>
